[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"
authors = [ "GenshinMinecraft <gm@highp.ing>" ]

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["d1"] }
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.7", features = ["serde", "v8"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }